<resources>
    <string name="app_name">Bull</string>
    <string name="facebook_app_id">2629927187154177</string>
    <string name="fb_login_protocol_scheme">fb2629927187154177</string>

    <string name="textAppDeveloperName">Sharan Kumar</string>
    <string name="textAppOwnerName">Shanthosh Sivan</string>

    <!--    Text/Placeholder/Hints/Helper Texts-->
    <string name="hintSearchEdit">Search for shops</string>
    <string name="hintEnterMobileNumber">Enter Mobile Number</string>
    <string name="hintEnterName">Enter Name</string>
    <string name="hintEnterSaloonName">Enter Saloon Name (Optional)</string>
    <string name="hintCaption">Caption (Optional)</string>
    <string name="hintComment">Enter comment..</string>
    <string name="hintReview">Enter Review..</string>
    <string name="hintSelectService">Select Service</string>
    <string name="hintSelectDate">Date of Appointment</string>
    <string name="hintSelectTime">Time of Appointment</string>

    <string name="placeHolderAreaName">Gandhipuram</string>
    <string name="placeHolderOpenStatus">Open</string>
    <string name="placeHolderClosedStatus">Closed</string>
    <string name="placeHolderNoNices">No Nices yet..</string>
    <string name="placeHolderUserName">Sharan Kumar</string>
    <string name="placeHolderNumber">5</string>
    <string name="placeHolderReview"> Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, </string>
    <string name="placeHolderSaloonName">Saloon Name</string>
    <string name="placeHolderSaloonAddress">Saloon Address</string>
    <string name="placeHolderReviewCount">5</string>
    <string name="placeHolderMobileNumber">+919941677517</string>
    <string name="placeHolderNoComments">No Comments yet</string>
    <string name="placeholderPricingLabel">Haircut</string>
    <string name="placeHolderCommentsCount">3</string>
    <string name="placeHolderNiceCount">20</string>
    <string name="placeHolderAppVersion">Version : 1.0</string>
    <string name="placeHolderTime">%1$s : %2$s %3$s</string>
    <string name="placeHolderDate">%1$s , %2$s %3$s</string>
    <string name="placeHolderServiceName">Haircut + Shaving</string>
    <string name="placeHolderLikes">0</string>

    <string name="textViewSaloonName">Saloon Name</string>
    <string name="textResendOtp">Resending OTP in %1$d secs</string>
    <string name="textAlreadyHaveAccount">Already have an account?</string>
    <string name="textDoNotHaveAccount">Do not have an account?</string>
    <string name="textUploading">Uploading</string>
    <string name="textProgressIndicator">%1$s</string>
    <string name="textBullMagicImageDate">%1$d %2$s %3$s</string>
    <string name="textTabNices">Nices</string>
    <string name="textTabReviews">Reviews</string>
    <string name="textTabComments">Comments</string>
    <string name="textTabPhotos">Photos</string>
    <string name="textImageCaption">New Style. New Look. New Me</string>
    <string name="textMenuItemStyles">Styles</string>
    <string name="textNoImages">No Photos yet..</string>
    <string name="textNoComments">No Comments yet..</string>
    <string name="textNoReviews">No Reviews yet.. Be the First to add a Review and Rating</string>
    <string name="textFollowers">Followers</string>
    <string name="textFollowing">Following</string>
    <string name="textHaircut">Haircut</string>
    <string name="textHaircutPrice" formatted="true">\u20B9 %s</string>
    <string name="textShaving">Shaving</string>
    <string name="textShavingPrice">\u20B9 100</string>
    <string name="textSaloonDistance">%s km</string>
    <string name="textCall">Call</string>
    <string name="textLocation">Location</string>
    <string name="textReviewCount">5</string>
    <string name="textCacheSize">0 MB</string>
    <string name="textTurnOnGPS">Turn ON GPS to sort Saloon by Distance</string>
    <string name="textFetchingLocationData">"Please wait.. Fetching Location Data.. "</string>
    <string name="textFetchingLocationDataFailed">"Unable to fetch location data. \n\n Saloon distance cannot be determined. \n\n Continue to use the app and try again later to use location services"</string>
    <string name="textAppOwner">App Owned By</string>
    <string name="textAppDeveloper">App Developed By</string>
    <string name="textDeleteComment">Are you sure to delete the comment?</string>
    <string name="textLoadingAppointment">Please wait! Booking appointment</string>
    <string name="textLoadingCancelAppointment">Please wait! Cancelling appointment</string>

    <string name="helperEnterMobileNumber">Enter mobile number without country code</string>

    <!--    Button/ImageViewButton Texts-->
    <string name="buttonSearch">search button</string>
    <string name="buttonTakePhoto">Take Photo</string>
    <string name="buttonStyleList">Style List</string>
    <string name="buttonBullMagic">Bull Magic</string>
    <string name="buttonSaloonList">Saloon List</string>
    <string name="buttonUploadImageFirebase">Upload</string>
    <string name="buttonCancelImage">Retake</string>
    <string name="buttonSignIn">Sign-In</string>
    <string name="buttonCreateAccount">Create Account</string>
    <string name="buttonResendOtp">Resend OTP</string>
    <string name="buttonGenerateOtp">Generate OTP</string>
    <string name="buttonVerifyOtp">Verify OTP</string>
    <string name="buttonSkip">Skip</string>
    <string name="buttonOK">OK</string>
    <string name="buttonFollow">Follow</string>
    <string name="buttonUnFollow">Un-Follow</string>
    <string name="buttonDismiss">Dismiss</string>
    <string name="buttonGoogleSignIn">GOOGLE SIGN-IN</string>
    <string name="buttonFacebookSignIn">FACEBOOK SIGN-IN</string>
    <string name="buttonMobileSignIn">MOBILE SIGN-IN</string>
    <string name="buttonAppointment">Appointment</string>
    <string name="buttonRate">Rate</string>
    <string name="buttonAddReviewAndRating">Add Rating / Add Review</string>
    <string name="buttonTurnOnGPS">Turn ON GPS</string>
    <string name="buttonLoadMoreReviews">Load more reviews</string>
    <string name="buttonLoadMoreSaloons">Load more saloons</string>
    <string name="buttonLoadMore">load more</string>
    <string name="buttonChangeUserName">Change User Name</string>
    <string name="buttonChangeProfilePic">Change Display Picture</string>
    <string name="buttonClearCache">Clear Cache</string>
    <string name="buttonReply">Reply</string>
    <string name="buttonDelete">Delete</string>
    <string name="buttonCancel">Cancel</string>
    <string name="buttonSavedStyles">Saved Styles</string>
    <string name="buttonYourAppointments">Appointments</string>

    <!--    Content Description Texts-->
    <string name="contentDescription">Bull Logo</string>
    <string name="contentDescriptionRating">rating</string>
    <string name="contentDescriptionGender">gender</string>
    <string name="contentDescriptionSplashScreenLogo">splashScreenLogo</string>
    <string name="contentDescriptionAppointment">appointment button</string>
    <string name="contentDescriptionCallButton">callButton</string>
    <string name="contentDescriptionMapButton">mapButton</string>
    <string name="contentDescriptionBullImageList">downloaded user image</string>
    <string name="contentDescriptionNiceStatus">Nice Status</string>
    <string name="contentDescriptionEditProfilePic">Edit Profile Picture</string>
    <string name="contentDescriptionFlipCamera">Flip Camera</string>
    <string name="contentDescriptionUploadFromGallery">Upload from gallery button</string>
    <string name="contentDescriptionLoadingIcon">Loading icon</string>
    <string name="contentDescriptionBackButton">Back button</string>
    <string name="contentDescriptionCameraFab">Camera FAB</string>
    <string name="contentDescriptionReviewCount">Review Count</string>
    <string name="contentDescriptionCapturedImage">Captured Image Preview</string>
    <string name="contentDescriptionSaloonDisplayImage">Saloon Display Image</string>

    <!--    Menu items title-->
    <string name="menuItemTitleAbout">About Us</string>
    <string name="menuItemTitleSignOut">Sign out</string>
    <string name="menuItemTitleUserProfile">Your Profile</string>
    <string name="menuItemSavedStyles">Saved Styles</string>
    <string name="menuItemBullMagic">Bull-Magic</string>
    <string name="menuItemSettings">Settings</string>
    <string name="menuItemSaloonOwner">Saloon Owner</string>
    <string name="menuItemHome">Home</string>
    <string name="menuItemProfile">Profile</string>
    <string name="popUpMenuItemTakePicture">Take Picture</string>
    <string name="popUpMenuItemGallery">Upload from Images</string>
    <string name="popUpMenuItemRemovePhoto">Remove Photo</string>

    <string name="hello_blank_fragment">hello_blank_fragment</string>
    <string name="textNoAppointments">You have not made any appointments</string>

    <string name="buttonCancelAppointment">Cancel Appointment</string>


</resources>