<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/saloonFragment"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/menuItemHome"/>


    <item
        android:id="@+id/bullMagicFragment"
        android:icon="@drawable/ic_bull_nav_icon_white"
        android:title="@string/menuItemBullMagic"/>

    <item
        android:id="@+id/placeholder"
        android:title=""/>

    <item
        android:id="@+id/styleListFragment"
        android:icon="@drawable/ic_style_icon_menu_white"
        android:title="@string/textMenuItemStyles"/>

    <item
        android:id="@+id/yourProfileFragment"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/menuItemProfile"/>

</menu>