<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.MainFragment"
    >

    <RelativeLayout
        android:id="@+id/searchBarLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="@color/mainActButtonBgColorActive"
        android:orientation="horizontal"
        android:paddingTop="15dp"
        android:paddingBottom="10dp">

        <ImageView
            android:id="@+id/search_ImageView"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="start"
            android:layout_marginStart="10dp"
            android:clickable="true"
            android:contentDescription="@string/buttonSearch"
            android:focusable="true"

            android:src="@drawable/ic_search_inverted" />

        <EditText
            android:id="@+id/searchText_TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/search_ImageView"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="10dp"

            android:autofillHints="Search for shops, hairstyles..."
            android:background="@android:color/transparent"

            android:hint="@string/hintSearchEdit"
            android:inputType="text"
            android:textColor="@color/black"
            android:textColorHint="#AAAAAA" />

    </RelativeLayout>

    <com.google.android.material.tabs.TabLayout
        style="@style/Widget.MaterialComponents.TabLayout.PrimarySurface"
        android:id="@+id/tabInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        app:tabTextColor="#CCCCCC"
        app:tabIndicatorColor="@color/teal_700"
        app:tabSelectedTextColor="@color/white"

        android:layout_below="@+id/searchBarLinearLayout">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonStyleList" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonSaloonList" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonBullMagic" />

    </com.google.android.material.tabs.TabLayout>

    <FrameLayout
        android:id="@+id/mainFragmentContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="2dp"
        android:background="@color/mainActivityBg"
        android:layout_below="@+id/tabInput">

    </FrameLayout>

</RelativeLayout>