<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <TextView
        android:id="@+id/dialogDeleteCommentText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/textDeleteComment"
        android:textSize="16sp"
        android:textColor="@color/black"

        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:gravity="center"

        android:layout_marginTop="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"

        android:layout_below="@+id/dialogDeleteCommentText">

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:id="@+id/cancelDeleteCommentDialogButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_weight="1"

            android:text="@string/buttonCancel"
            android:textColor="@color/black" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/deleteCommentDialogButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_weight="1"

            android:text="@string/buttonDelete"

            android:backgroundTint="@color/teal_200_comp_red"/>

    </LinearLayout>

</RelativeLayout>