<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.CameraFragment">

    <androidx.camera.view.PreviewView
        android:id="@+id/viewFinder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.camera.view.PreviewView>

    <RelativeLayout
        android:id="@+id/capturedImageViewLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:background="@color/black"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/capturedImageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/contentDescriptionCapturedImage"
            android:layout_above="@+id/capturedImageButtonContainer"/>

        <LinearLayout
            android:id="@+id/capturedImageButtonContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/CancelImageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:gravity="center"

                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:text="@string/buttonCancelImage"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/UploadImageFirebaseButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"

                android:backgroundTint="@color/white"
                android:gravity="center"

                android:text="@string/buttonUploadImageFirebase"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </LinearLayout>

    </RelativeLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/takePhotoButton"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:background="@drawable/bg_take_photo_rounded"

        android:gravity="bottom|center_horizontal"

        android:paddingBottom="10dp"
        android:text="@string/buttonTakePhoto"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/changeCameraButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:contentDescription="@string/contentDescriptionFlipCamera"

        android:src="@drawable/ic_baseline_flip_camera_android_40"

        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.87"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.97" />

    <ImageView
        android:id="@+id/uploadFromGalleryButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:contentDescription="@string/contentDescriptionUploadFromGallery"

        android:src="@drawable/ic_baseline_photo_library_40"

        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.97"
        tools:ignore="RedundantDescriptionCheck" />

    <ImageView
        android:id="@+id/backCameraButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:contentDescription="@string/contentDescriptionBackButton"

        android:src="@drawable/ic_baseline_arrow_back_24"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.97"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.02" />

    <androidx.cardview.widget.CardView
        android:id="@+id/progressIndicatorCardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardBackgroundColor="@color/white"

        app:cardCornerRadius="20dp"
        app:cardElevation="4dp"
        app:cardPreventCornerOverlap="true"

        app:cardUseCompatPadding="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.42"
        android:visibility="gone">

        <RelativeLayout
            android:id="@+id/progressRelativeLayout"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">

            <TextView
                android:id="@+id/progressLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/textUploading"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/progressIndicatorText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_toEndOf="@+id/progressLabel"
                android:layout_marginStart="150dp"
                android:layout_marginEnd="10dp"

                android:textAlignment="textEnd"
                android:text="@string/textProgressIndicator"
                android:textColor="@color/black" />

            <com.google.android.material.progressindicator.LinearProgressIndicator
                android:id="@+id/progress_horizontal"
                style="@style/Widget.MaterialComponents.LinearProgressIndicator"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_below="@+id/progressIndicatorText"

                android:layout_marginTop="10dp"
                android:indeterminate="false"
                android:progress="0"
                app:trackColor="@color/black"
                app:indicatorColor="@color/openStatusColor"/>
        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <ImageView
        android:contentDescription="@string/contentDescriptionLoadingIcon"
        android:id="@+id/loading_icon_camera"
        android:layout_width="120dp"
        android:layout_height="140dp"
        android:src="@drawable/avd_loading_icon_wtob_anim"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>