<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical|center_horizontal"
    tools:context=".fragments.homeActivity.CreateAccountFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/mobileNumberTextInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="280dp"
        android:layout_height="wrap_content"

        app:boxBackgroundMode="outline"
        app:helperText="@string/helperEnterMobileNumber"
        app:helperTextTextAppearance="@style/HelperText"
        app:hintTextAppearance="@style/HintText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/mobileNumberTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintEnterMobileNumber"
            android:inputType="phone"
            android:textColorHint="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/UserNameTextInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="280dp"
        android:layout_height="wrap_content"

        app:boxBackgroundMode="outline"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:errorEnabled="true"
        app:helperTextTextAppearance="@style/HelperText"
        app:hintTextAppearance="@style/HintText"
        android:layout_below="@+id/mobileNumberTextInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/UserNameTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintEnterName"
            android:inputType="textPersonName"
            android:textColorHint="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:id="@+id/otpBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@+id/UserNameTextInputLayout"

        android:visibility="gone">

        <EditText
            android:id="@+id/otpBox1"
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"

            android:inputType="number"
            android:maxLength="1"

            android:background="@drawable/bg_otp_box"
            android:textAlignment="center"
            android:textSize="26sp"
            tools:ignore="Autofill,LabelFor" />

        <EditText
            android:id="@+id/otpBox2"
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"

            android:inputType="number"
            android:maxLength="1"

            android:layout_toEndOf="@+id/otpBox1"
            android:background="@drawable/bg_otp_box"
            android:textAlignment="center"
            android:textSize="26sp"
            tools:ignore="Autofill,LabelFor" />

        <EditText
            android:id="@+id/otpBox3"
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"

            android:inputType="number"
            android:maxLength="1"

            android:layout_toEndOf="@+id/otpBox2"
            android:background="@drawable/bg_otp_box"
            android:textAlignment="center"
            android:textSize="26sp"
            tools:ignore="Autofill,LabelFor" />

        <EditText
            android:id="@+id/otpBox4"
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"

            android:inputType="number"
            android:maxLength="1"

            android:layout_toEndOf="@+id/otpBox3"
            android:background="@drawable/bg_otp_box"
            android:textAlignment="center"
            android:textSize="26sp"
            tools:ignore="Autofill,LabelFor" />

        <EditText
            android:id="@+id/otpBox5"
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"

            android:inputType="number"
            android:maxLength="1"

            android:layout_toEndOf="@+id/otpBox4"
            android:background="@drawable/bg_otp_box"
            android:textAlignment="center"
            android:textSize="26sp"
            tools:ignore="Autofill,LabelFor" />

        <EditText
            android:id="@+id/otpBox6"
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"

            android:inputType="number"
            android:maxLength="1"

            android:layout_toEndOf="@+id/otpBox5"
            android:background="@drawable/bg_otp_box"
            android:textAlignment="center"
            android:textSize="26sp"
            tools:ignore="Autofill,LabelFor" />

        <TextView
            android:id="@+id/labelOtpResend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/otpBox1"
            android:layout_marginTop="5dp"

            android:text="@string/textResendOtp"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/otpResendButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/otpBox1"
            android:layout_alignEnd="@id/otpBox6"

            android:layout_marginTop="5dp"
            android:text="@string/buttonResendOtp"
            android:textSize="15sp" />

    </RelativeLayout>

    <Button
        android:id="@+id/generateOtpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#CCCCCC"
        android:text="@string/buttonGenerateOtp"
        android:gravity="center"

        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:layout_below="@+id/otpBox"
        android:layout_alignEnd="@id/otpBox"
        android:layout_alignStart="@id/otpBox"/>


    <Button
        android:id="@+id/verifyOtpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#CCCCCC"
        android:text="@string/buttonVerifyOtp"

        android:textColor="@color/black"
        android:textSize="12sp"
        android:layout_below="@+id/generateOtpButton"
        android:layout_marginTop="10dp"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:layout_alignEnd="@id/otpBox"
        android:layout_alignStart="@id/otpBox"

        android:visibility="gone"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/verifyOtpButton"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/labelSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="@string/textAlreadyHaveAccount" />

        <Button
            android:id="@+id/SignInButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_toEndOf="@+id/labelSignIn"
            android:text="@string/buttonSignIn"
            android:textColor="@color/white"/>

    </RelativeLayout>

</RelativeLayout>